Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21949

key rotation for innodb_encrypt_log is not working in 10.5

    XMLWordPrintable

Details

    Description

      Found by reading the code. https://github.com/MariaDB/server/blob/17080cbcf04ab295806db8aaaeead2696988fab4/storage/innobase/log/log0crypt.cc#L158

      So, all key rotation logic depends on log_t::FORMAT_ENC_10_4 while in 10.5 it should also work for log_t::FORMAT_ENC_10_5

      Attachments

        Issue Links

          Activity

            People

              kevg Eugene Kosov (Inactive)
              kevg Eugene Kosov (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 0.25d
                  0.25d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.