MDEV-21949 key rotation for innodb_encrypt_log is not working in 10.5

log_t::has_encryption_key_rotation(): checks whether
key rotation is supported.

In a subsequent redo log format version, this key rotation
may be broken again.